--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,69 @@
 body{
   font-family: sans-serif;
 }
+
+
+/* Custom Loader styles */
+@layer components {
+  .loader-text {
+    @apply relative;
+  }
+  
+  .loader-before {
+    @apply absolute bg-current;
+    right: 4.375rem; /* 70px */
+    bottom: 0.625rem; /* 10px */
+    height: 1.75rem; /* 28px */
+    width: 1.29rem; /* 5.15px */
+    animation: animloader1 1s linear infinite alternate;
+  }
+
+  .loader-after {
+    @apply absolute bg-red-600 rounded-full;
+    left: 7.8rem; /* 125px */
+    top: 0.5rem; /* 2px */
+    width: 0.625rem; /* 10px */
+    height: 0.625rem; /* 10px */
+    animation: animloader 1s linear infinite alternate;
+  }
+}
+
+/* Animations */
+@keyframes animloader {
+  0% {
+    transform: translate(0px, 0px) scaleX(1);
+  }
+  14% {
+    transform: translate(-12px, -16px) scaleX(1.05);
+  }
+  28% {
+    transform: translate(-27px, -28px) scaleX(1.07);
+  }
+  42% {
+    transform: translate(-46px, -35px) scaleX(1.1);
+  }
+  57% {
+    transform: translate(-70px, -37px) scaleX(1.1);
+  }
+  71% {
+    transform: translate(-94px, -32px) scaleX(1.07);
+  }
+  85% {
+    transform: translate(-111px, -22px) scaleX(1.05);
+  }
+  100% {
+    transform: translate(-125px, -9px) scaleX(1);
+  }
+}
+
+@keyframes animloader1 {
+  0% {
+    box-shadow: 0 -6px, -122.9px -8px;
+  }
+  25%, 75% {
+    box-shadow: 0 0px, -122.9px -8px;
+  }
+  100% {
+    box-shadow: 0 0px, -122.9px -16px;
+  }
+}
